# FDTD-RingResonator

./: 1dFDTD.ipynb  2x1DCouple-V2.ipynb  2x1DCouple.html  2x1DCouple.ipynb  README.md
samples/: Cargo.toml  README.md
samples/src/: main.rs
