[package]
name = "samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.1"
rand = "0.8.5"
eigenvalues = "0.4.0"
cc = "1.0.79"


[dependencies.nalgebra-lapack]
version = "0.24.0"
default-features = false